--- a/src/plugins/test/Makefile.am
+++ b/src/plugins/test/Makefile.am
@@ -1,6 +1,6 @@
 AM_CFLAGS = -I@top_srcdir@/src/
 
 bin_PROGRAMS = fake_me_recv
-fake_me_recv_CFLAGS = @OVIS_LIB_INCDIR_FLAG@
+fake_me_recv_CFLAGS = @OVIS_LIB_INCDIR_FLAG@ @EVENTINC@
 fake_me_recv_LDADD = @OVIS_LIB_LIBDIR_FLAG@ -lzap -lpthread \
-		     -levent
+		     @EVENTLIBS@
