--- a/configure.ac
+++ b/configure.ac
@@ -12,6 +12,7 @@ AC_PROG_CC()
 AC_PROG_CXX()
 AM_PROG_CC_C_O()
 
+OPTION_DEFAULT_DISABLE([etc], [ENABLE_ETC])
 dnl Swig stuffs
 OPTION_DEFAULT_ENABLE([swig], [ENABLE_SWIG])
 if test -z "$ENABLE_SWIG_TRUE"
