--- a/etc/init.d/balerd.in
+++ b/etc/init.d/balerd.in
@@ -90,6 +90,14 @@ mkdir -p $OVIS_HOME/var/log/
 
 start() {
 	echo -n "Starting $prog: "
+	# Check running instance
+	pid=`get_pid $BALER`
+	if [ $pid ] ; then
+		echo -n "Balerd is already running: "
+		echo_failure
+		echo
+		exit 1
+	fi
 
 	$BALER -l $OVIS_HOME/var/log/balerd.log -s $BALER_STORE -z $BALER_PORT_TO_OCMD
 
@@ -112,6 +120,7 @@ start() {
 }
 
 stop() {
+	echo -n "Stopping $prog: "
 	if [ -f $pidfile ]; then
 		pid=`cat $pidfile`
 	else
@@ -123,7 +132,7 @@ stop() {
 		echo "Cannot obtain pid ..."
 		echo_failure
 		echo
-		return -1
+		exit 1
 	else
 		kill $pid
 	fi
