--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -1,4 +1,3 @@
 install-data-local:
-	$(MKDIR_P) $(DESTDIR)/$(prefix)/etc/init.d
-	$(INSTALL_SCRIPT) $(builddir)/init.d/balerd $(DESTDIR)/$(prefix)/etc/init.d/
-	$(LN_S) -f $(DESTDIR)/$(prefix)/etc/init.d/balerd /etc/init.d/
+	$(MKDIR_P) $(DESTDIR)/etc/init.d
+	$(INSTALL_SCRIPT) $(builddir)/init.d/balerd $(DESTDIR)/etc/init.d/
