baler: add eng-dictionary Makefile.am
This change includes:
- dict/Makefile.am for eng-dictionary installation
- dict/README to explain how this eng-dictionary was made
- top dir configure.ac and Makefile.am to allow --disable-dict
  (enabled by default)

Change-Id: Ic9a4996216c3fc0921e0595d005ca956add2cb58

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,5 +4,9 @@ if ENABLE_ETC
 SUBDIRS += etc
 endif
 
+if ENABLE_DICT
+SUBDIRS += dict
+endif
+
 PEDIGREE = $(DESTDIR)/$(bindir)/baler-pedigree
 include $(top_srcdir)/../automake/pedigree.am
