baler: parallel baler feature
In the old days, baler daemons in different hosts are totally
independent. No information is shared. This changeset implement
slave-master scheme of dictionary (for token and patterns) sharing
among baler daemons. There will be one master and any number of
slaves. The master will have all dictionary information, while the
slaves may have only the parts that they use.

Change-Id: Iec80c7451c8cb5b6d82f2e1dc645bc47aafec8e2

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,5 +8,9 @@ if ENABLE_DICT
 SUBDIRS += dict
 endif
 
+if ENABLE_DOC
+SUBDIRS += docs
+endif
+
 PEDIGREE = $(DESTDIR)/$(bindir)/baler-pedigree
 include $(top_srcdir)/../automake/pedigree.am
