--- a/src/test/Makefile.am
+++ b/src/test/Makefile.am
@@ -14,3 +14,6 @@ bset_test_SOURCES = bset_test.c
 bset_test_LDADD = ../baler/libbset.la
 bin_PROGRAMS += bset_test
 
+bstr_dist_u32_test_SOURCES = bstr_dist_u32_test.c
+bstr_dist_u32_test_LDADD = ../baler/libbutils.la
+bin_PROGRAMS += bstr_dist_u32_test
