--- a/src/test/Makefile.am
+++ b/src/test/Makefile.am
@@ -21,3 +21,7 @@ bin_PROGRAMS += bstr_dist_u32_test
 bhash_test_SOURCES = bhash_test.c
 bhash_test_LDADD = ../baler/libbaler.la
 bin_PROGRAMS += bhash_test
+
+bmhash_test_SOURCES = bmhash_test.c
+bmhash_test_LDADD = ../baler/libbaler.la
+bin_PROGRAMS += bmhash_test
