--- a/swig/Makefile.am
+++ b/swig/Makefile.am
@@ -9,10 +9,7 @@ _bquery_la_SOURCES = bquery.c
 _bquery_la_CFLAGS = -g $(SWIG_PYTHON_CPPFLAGS) $(INC)
 _bquery_la_LDFLAGS = -module -shared $(PYTHON_LDFLAGS) @SOS_LIBDIR_FLAG@
 _bquery_la_LIBADD = $(top_builddir)/src/query/libbquery.la \
-		    $(top_builddir)/src/baler/libbmapper.la \
-		    $(top_builddir)/src/baler/libbmvec.la \
-		    $(top_builddir)/src/baler/libbmem.la \
-		    $(top_builddir)/src/baler/libbutils.la \
+		    $(top_builddir)/src/baler/libbaler.la \
 		    -lsos \
 		    -lobjidx
 
