--- a/dict/Makefile.am
+++ b/dict/Makefile.am
@@ -1,6 +1,6 @@
 install-data-local:
-	$(MKDIR_P) $(DESTDIR)/etc/ovis
-	$(INSTALL_DATA) $(srcdir)/eng-dictionary $(DESTDIR)/etc/ovis
+	$(MKDIR_P) $(DESTDIR)/$(prefix)/etc/ovis
+	$(INSTALL_DATA) $(srcdir)/eng-dictionary $(DESTDIR)/$(prefix)/etc/ovis
 
 uninstall-local:
-	rm -f $(DESTDIR)/etc/ovis/eng-dictionary
+	rm -f $(DESTDIR)/$(prefix)/etc/ovis/eng-dictionary
