baler: swig build fix
Fix swig build option, making it optional. It was always enabled and
will try to install even if it is disabled.

Also, change the default of swig option to be disabled.

Change-Id: Ibf37a82da2f6e8ac8aff8cce19d4e1bda9c813ed

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,10 @@
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = src scripts swig
+SUBDIRS = src
+
+if ENABLE_SWIG
+SUBDIRS += swig
+endif
+
 if ENABLE_ETC
 SUBDIRS += etc
 endif
