--- a/configure.ac
+++ b/configure.ac
@@ -15,7 +15,7 @@ AM_PROG_CC_C_O()
 OPTION_DEFAULT_ENABLE([dict], [ENABLE_DICT])
 OPTION_DEFAULT_DISABLE([etc], [ENABLE_ETC])
 dnl Swig stuffs
-OPTION_DEFAULT_ENABLE([swig], [ENABLE_SWIG])
+OPTION_DEFAULT_DISABLE([swig], [ENABLE_SWIG])
 if test -z "$ENABLE_SWIG_TRUE"
 then
 	AM_PATH_PYTHON(2.6)
