--- a/src/bhttpd/Makefile.am
+++ b/src/bhttpd/Makefile.am
@@ -3,9 +3,11 @@ bin_PROGRAMS =
 
 AM_CFLAGS = -I$(srcdir)/../
 
-bhttpd_SOURCES = bhttpd.c bq_fmt_json.c \
+bhttpd_SOURCES = bq_fmt_json.c \
 		 bhttpd_meta.c \
-		 bhttpd_query.c
+		 bhttpd_query.c \
+		 bhttpd_list.c \
+		 bhttpd.c
 bhttpd_LDADD = ../baler/libbaler.la \
 	       ../query/libbquery.la \
 	       -lpthread -levent -lzap
