--- a/src/plugins/Makefile.am
+++ b/src/plugins/Makefile.am
@@ -5,11 +5,17 @@ AM_CFLAGS = -I@top_srcdir@/src/
 
 libbin_rsyslog_tcp_la_SOURCES = bin_rsyslog_tcp.c
 libbin_rsyslog_tcp_la_CFLAGS = $(AM_CFLAGS) @EVENTINC@
-libbin_rsyslog_tcp_la_LIBADD = ../baler/libbutils.la \
-			       @EVENTLIBS@ \
+libbin_rsyslog_tcp_la_LIBADD = @EVENTLIBS@ \
 			       -lpthread \
 			       ../baler/libbaler.la
 lib_LTLIBRARIES += libbin_rsyslog_tcp.la
+
+libbin_metric_la_SOURCES = bin_metric.c
+libbin_metric_la_CFLAGS = $(AM_CFLAGS) @EVENTINC@
+libbin_metric_la_LIBADD = @EVENTLIBS@ \
+			  -lpthread \
+			  ../baler/libbaler.la
+lib_LTLIBRARIES += libbin_metric.la
 
 libbout_sos_la_SOURCES = bout_sos.c
 libbout_sos_la_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
