--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,3 @@
-SUBDIRS = baler plugins query bhttpd bassoc test
+SUBDIRS = baler plugins query bhttpd bassoc test tools
 
 nobase_pkginclude_HEADERS = query/bquery.h bassoc/bassoc.h
