--- a/src/tools/Makefile.am
+++ b/src/tools/Makefile.am
@@ -10,3 +10,7 @@ bin_PROGRAMS += bcsv2bnumvec
 bnumvec_SOURCES = bnumvec.c
 bnumvec_LDADD = ../baler/libbaler.la -lpthread -lm
 bin_PROGRAMS += bnumvec
+
+btkn_dump_SOURCES = btkn_dump.c
+btkn_dump_LDADD = ../baler/libbaler.la
+bin_PROGRAMS += btkn_dump
