--- a/src/plugins/Makefile.am
+++ b/src/plugins/Makefile.am
@@ -17,6 +17,16 @@ libbin_metric_la_LIBADD = @EVENTLIBS@ \
 			  ../baler/libbaler.la
 lib_LTLIBRARIES += libbin_metric.la
 
+libbsos_msg_la_SOURCES = bsos_msg.c bsos_msg.h
+libbsos_msg_la_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
+libbsos_msg_la_LIBADD = -lsos ../baler/libbaler.la -lpthread @SOS_LIBDIR_FLAG@
+lib_LTLIBRARIES += libbsos_msg.la
+
+libbsos_img_la_SOURCES = bsos_img.c bsos_img.h
+libbsos_img_la_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
+libbsos_img_la_LIBADD = -lsos ../baler/libbaler.la -lpthread @SOS_LIBDIR_FLAG@
+lib_LTLIBRARIES += libbsos_img.la
+
 libbout_sos_la_SOURCES = bout_sos.c bout_sos.h
 libbout_sos_la_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
 libbout_sos_la_LIBADD = -lsos ../baler/libbaler.la \
@@ -24,18 +34,20 @@ libbout_sos_la_LIBADD = -lsos ../baler/libbaler.la \
 			@SOS_LIBDIR_FLAG@
 lib_LTLIBRARIES += libbout_sos.la
 
-libbout_sos_img_la_SOURCES = bout_sos_img.c bout_sos_img.h sos_img_class_def.h
+libbout_sos_img_la_SOURCES = bout_sos_img.c bout_sos_img.h
 libbout_sos_img_la_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
 libbout_sos_img_la_LIBADD = ../baler/libbaler.la \
 			    libbout_sos.la \
+			    libbsos_img.la \
 			    -lpthread \
 			    -lsos @SOS_LIBDIR_FLAG@
 lib_LTLIBRARIES += libbout_sos_img.la
 
-libbout_sos_msg_la_SOURCES = bout_sos_msg.c bout_sos_msg.h sos_msg_class_def.h
+libbout_sos_msg_la_SOURCES = bout_sos_msg.c bout_sos_msg.h
 libbout_sos_msg_la_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
 libbout_sos_msg_la_LIBADD = ../baler/libbaler.la \
 			    libbout_sos.la \
+			    libbsos_msg.la \
 			    -lpthread \
 			    -lsos @SOS_LIBDIR_FLAG@
 lib_LTLIBRARIES += libbout_sos_msg.la
