port v2 build system, less man, to v3.
build updated such that demo script runs

This approximates the toss build
mkdir build; cd build ; ../configure --disable-rpath --with-pkglibdir=ovis-ldms --prefix=/tmp/testbuild
make
make install
/tmp/testbuild/bin/ldms_local_usertest.sh

updating silentrules macro quoting.

improvement in test scripts.

options.m4 - 'with' option does not imply 'enable'

'with' and 'enable' options are independent options. Some dependencies
may want 'with' option, but has no 'enable' option at all (e.g.
librdmacm).

baler: baler build rule fix

- Change OCM option to disable by default.
- Add libevent options
- Fix OCM and SOS condition check (configure.ac)
- Add -levent_pthreads to bhttpd

ldms: enable ldms-python build by default

Enable ldms-python build option by default, so that ldmsd_controller
is built and install.

baler: swig build fix

Fix sos include flag in baler swig.

baler: simple_test - env.sh path update

Update ZAP_LIBPATH to match the new Makefile library destination.

options.m4 - add -rpath-link so that objects are resolvable

Add -rpath-link into LDFLAGS for each --with-XXX libraries,
so that the shared objects are resolvable.

options.m4 - warning instead of error for git check

Git checking function yielded an error if it cannot locate
ovis source tree. It now gives a warning instead.

lib: rhel7 spec file update

Update rhel7 spec file to match the automake from v2.

ldms: update build files

Update ldms build files to match with the automake from v2, with str_map
cleanup.

- remove str_map in lustre sampler, and link to libcoll
- update rhel7 rpm spec file
- update various ldms Makefiles

baler: update build files

Update baler build files to match the build from v2.

ldms: remove -Wall flag from the build rule

In ldms/src/core/Makefile.am -Wall flag should not be specified in the
build rule. It was historically there, but had never really used as the
library specifies its own CFLAGS.

rpm7 - harvest RPMs into RPM7/

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,7 +19,7 @@ endif
 
 # Make rule for RPM on RHEL7
 rpm7: dist-gzip
-	mkdir -p $@/{BUILD,RPMS,SOURCES,SPECS,SRPMS}
+	$(MKDIR_P) $@/{BUILD,RPMS,SOURCES,SPECS,SRPMS}
 	ln -f -s ../../automake rpm7/BUILD/automake
 	cp $(distdir).tar.gz $@/SOURCES
 	cp rpm/rhel7.spec $@/SPECS
