--- a/baler.cfg
+++ b/baler.cfg
@@ -1,6 +1,6 @@
-tokens type=ENG path=/home/narate/wordlists/mylist-w-variation
-tokens type=HOST path=/home/narate/wordlists/hosts.txt
-plugin name=bout_sos_img delta_ts=60 store_name=img_60
+tokens type=ENG path=/opt/ovis/etc/ovis/eng-dictionary
+tokens type=HOST path=/opt/ovis/etc/ovis/hosts.txt
+plugin name=bout_sos_img delta_ts=3600
+plugin name=bout_sos_img delta_ts=60
 plugin name=bout_sos_msg
 plugin name=bin_rsyslog_tcp port=55555
-#plugin name=bout_me host=z.ogc.int port=55555 xprt=sock
