--- a/etc/init.d/Makefile.am
+++ b/etc/init.d/Makefile.am
@@ -1,3 +1,5 @@
+EXTRA_DIST = balerd
+
 install-data-local:
 	$(MKDIR_P) $(DESTDIR)/$(sysconfdir)/init.d
 	$(INSTALL_SCRIPT) $(builddir)/balerd $(DESTDIR)/$(sysconfdir)/init.d/
