--- a/etc/logrotate.d/Makefile.am
+++ b/etc/logrotate.d/Makefile.am
@@ -1,3 +1,4 @@
+EXTRA_DIST = balerd
 install-data-local:
 	$(MKDIR_P) $(DESTDIR)/$(sysconfdir)/ovis/logrotate.d
 	$(INSTALL_DATA) $(srcdir)/balerd $(DESTDIR)/$(sysconfdir)/ovis/logrotate.d/
