--- a/src/plugins/Makefile.am
+++ b/src/plugins/Makefile.am
@@ -13,13 +13,13 @@ lib_LTLIBRARIES += libsyslog_parser.la
 
 libbstore_sos_la_SOURCES = bstore_sos.c
 libbstore_sos_la_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
-libbstore_sos_la_LIBADD = ../baler/libbaler.la @SOS_LIBDIR_FLAG@ @SOS_LIB64DIR_FLAG@
+libbstore_sos_la_LIBADD = ../baler/libbaler.la -lsos @SOS_LIBDIR_FLAG@ @SOS_LIB64DIR_FLAG@
 # libbstore_sos_la_LDFLAGS = -pg -g
 lib_LTLIBRARIES += libbstore_sos.la
 
 libbstore_htbl_la_SOURCES = bstore_htbl.c
 libbstore_htbl_la_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
-libbstore_htbl_la_LIBADD = ../baler/libbaler.la @SOS_LIBDIR_FLAG@ @SOS_LIB64DIR_FLAG@
+libbstore_htbl_la_LIBADD = ../baler/libbaler.la -lsos @SOS_LIBDIR_FLAG@ @SOS_LIB64DIR_FLAG@
 # libbstore_htbl_la_LDFLAGS = -pg -g
 lib_LTLIBRARIES += libbstore_htbl.la
 
