Add missing syslog parser dependency to Makefile
This broke the RPM7 build

--- a/src/plugins/Makefile.am
+++ b/src/plugins/Makefile.am
@@ -5,7 +5,7 @@ lib_LTLIBRARIES =
 AM_CFLAGS = -I@top_srcdir@/src/
 
 AM_YFLAGS = -d
-libsyslog_parser_la_SOURCES = syslog_parser.y syslog_lexer.l
+libsyslog_parser_la_SOURCES = syslog_parser.y syslog_lexer.l syslog.h
 libsyslog_parser_la_CFLAGS = $(AM_CFLAGS)
 libsyslog_parser_la_LIBADD = ../baler/libbaler.la -ly -ll -lc
 # libsyslog_parser_la_LDFLAGS = -g -O0
