baler: addressing compilation warnings on Ubuntu 16.04
Address compilation warnings on Ubuntu 16.04 to make it compilable
when `-Werror` is turned on.

- _GNU_SOURCE: enabling _GNU_SOURCE by default in Makefile.am's
- printf: fixing the format mismatches.
- yacc: explicitly declare functions provided by yacc.

--- a/src/bassoc/Makefile.am
+++ b/src/bassoc/Makefile.am
@@ -1,7 +1,7 @@
 lib_LTLIBRARIES =
 bin_PROGRAMS =
 
-AM_CFLAGS = -I$(srcdir)/../
+AM_CFLAGS = -I$(srcdir)/../ -D_GNU_SOURCE
 
 libbassocimg_la_SOURCES = bassocimg.c bassocimg.h
 libbassocimg_la_LIBADD = ../baler/libbaler.la
