--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -1,1 +1,20 @@
 SUBDIRS = abhttp
+
+CFLAGS := $(filter-out -Werror, ${CFLAGS})
+
+pkgpyexec_LTLIBRARIES = Bq.la
+Bq_la_SOURCES = Bq.pyx Bs.pxd
+nodist_Bq_la_SOURCES = Bq.c
+Bq_la_CFLAGS = -g -O0 -I$(top_srcdir) $(SWIG_PYTHON_CPPFLAGS) -I$(top_srcdir)/src
+Bq_la_LDFLAGS = $(PYTHON_LDFLAGS) -module -shared
+Bq_la_LIBADD = $(top_builddir)/src/baler/libbaler.la
+
+pkgpyexecdir = $(pkgpythondir)
+
+Bq.c: Bq.pyx Bs.pxd
+	cython --gdb $< -o $@
+
+dist_bin_SCRIPTS = bq
+
+clean-local:
+	rm -f Bq.c
