all: support subproject tarball distribution.
- Create pedigree.am in each of the subprojects that requires it so
  that the file is included in the distributed tar balls.
- SHA.txt and TAG.txt are also created at the subproject level to be
  included in the distributed tar balls.
- OVIS_GITINFO use git information from following sources, ordered by
  precedence:
  - top-level git (verified with Ovis-top.m4)
  - each project's SHA.txt and TAG.txt
  - top-level SHA.txt and TAG.txt
  - NO_GIT

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 if ENABLE_BALER
 
-EXTRA_DIST = baler.cfg hosts.txt
+EXTRA_DIST = baler.cfg hosts.txt SHA.txt TAG.txt
 
 ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = src
@@ -42,4 +42,4 @@ rpm-clean:
 endif
 
 PEDIGREE = $(DESTDIR)/$(bindir)/baler-pedigree
-include $(top_srcdir)/../automake/pedigree.am
+include $(top_srcdir)/pedigree.am
