baler: deprecated bquery interface removal.
This commit removes old bquery interfaces in the favor of bstore
interface. In doing so, we also required to patch up both C and Python
code and packages. This also removes deprecated programs not supported
in baler4. The itemized summary is as the following:

- remove bquery, libbquery and cquery (`src/query/*`)

- remove swig interface (not maintained) in the favor of Cython (much
  cleaner python interface and better performance).

- patch python/Makefile.am to make `baler` python packages.
  Previously, this as in swig.

- patch `bassoc`, completely remove `bquery` dependencies and only
  uses `bstore`.

- remove `bhttpd` in the favor of CGI with `bstore` interface.

- remove C test programs that uses libbquery.

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,10 +4,9 @@ EXTRA_DIST = baler.cfg hosts.txt SHA.txt TAG.txt
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = src python
+SUBDIRS = src
 
-if ENABLE_SWIG
-SUBDIRS += swig
+if ENABLE_PYTHON
 SUBDIRS += python
 endif
 
