baler: Iterator refactor
Refacor iterators to adopt the iterator concept from SOS.

- The iterator  position manipulation operations now return a return
  code instead of the object.

- Also introduce "filter" to the iterator, which will restrict the
  results to those matching the filter condition.

--- a/test/indy_test4/bstore_agg.cfg
+++ b/test/indy_test4/bstore_agg.cfg
@@ -1,5 +1,6 @@
 store: store.agg
 update_interval: 3600.0
+host_list: ./host.list
 bstore_sos: ./store.0
 bstore_sos: ./store.1
 bstore_sos: ./store.2
