baler: python - Extensible Pattern Comparator infrastructure
Python infrastructure for extensible pattern comparators. This is to
support user-supplied pattern comparators to sort the list of output
patterns.

--- a/configure.ac
+++ b/configure.ac
@@ -155,6 +155,7 @@ AC_CONFIG_FILES([Makefile docs/Makefile src/Makefile
 	dict/Makefile
 	python/Makefile
 	python/abhttp/Makefile
+	python/ptn_cmp_ext/Makefile
 ])
 
 AC_OUTPUT
