baler: meta-clustering library for baler4
This commit includes the following:
- C library of meta-clustering for baler4
- Cython interface for meta-clustering computation
  - Exported as `.meta_clustering()` method call in Bstore object
- Modified simple_test4 patterns to help some meta-clustering testing
- Meta-clustering test program in C
- Meta-clustering test script in Python

--- a/src/baler/Makefile.am
+++ b/src/baler/Makefile.am
@@ -18,7 +18,8 @@ libbaler_la_SOURCES = mq.c bwqueue.c btkn.c bptn.c binput.c boutput.c \
 		      bmqueue.c \
 		      binput_private.h \
 		      fnv_hash.h \
-		      murmur_hash.h
+		      murmur_hash.h \
+		      bmeta.c
 libbaler_la_LDFLAGS = $(AM_LDFLAGS) -lpthread -lsos -ldl -lcoll \
 		      @OVIS_LIB_LIBDIR_FLAG@
 libbaler_la_CFLAGS = $(AM_CFLAGS) \
@@ -71,4 +72,5 @@ pkginclude_HEADERS = barray.h \
 		     btypes.h \
 		     butils.h \
 		     bwqueue.h \
-		     mq.h
+		     mq.h \
+		     bmeta.h
