--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -77,7 +77,8 @@ man/man7/%.7: man/man3/%.3
 #
 # man1_files will use the rule above to convert man3 to man1.
 man1_files = man/man1/balerd.1 \
-	    man/man1/bassoc.1
+	    man/man1/bassoc.1 \
+	    man/man1/n2dassoc.1
 
 $(man1_files): doxygen-out
 
