EXTRA_DIST - n2dassoc.dox
Forgot to add n2dassoc.dox into the EXTRA_DIST list.

--- a/src/n2dassoc/Makefile.am
+++ b/src/n2dassoc/Makefile.am
@@ -1,6 +1,8 @@
 lib_LTLIBRARIES =
 bin_PROGRAMS =
 
+EXTRA_DIST = n2dassoc.dox
+
 AM_CFLAGS = -I$(srcdir)/../ -D_GNU_SOURCE
 
 pkginclude_HEADERS = assoc.h \
