bassoc - retire bassoc
`bassoc` is retired in the favor of `n2dassoc`.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,1 @@
-SUBDIRS = baler plugins bassoc n2dassoc test tools
-
-nobase_pkginclude_HEADERS = bassoc/bassoc.h
+SUBDIRS = baler plugins n2dassoc test tools
