Retire deprecated `bin_rsyslog_tcp` plugin.

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -85,8 +85,7 @@ man1_MANS = $(man1_files)
 
 
 # Plugin configuration documents are put in section 5 (config files)
-man5_files = man/man5/bin_rsyslog_tcp.config.5 \
-	     man/man5/bout_sos_msg.config.5 \
+man5_files = man/man5/bout_sos_msg.config.5 \
 	     man/man5/bout_sos_img.config.5
 
 $(man5_files): doxygen-out
